# planeks-fakecsv

./: .gitignore  LICENSE  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
planeks_fakecsv/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
planeks_fakecsv/apps/generate/: admin.py  models.py  tasks.py  urls.py  views.py
planeks_fakecsv/apps/generate/migrations/: 0001_initial.py  0002_dataset.py  0003_rename_schema_columns_dataschema_columns.py
planeks_fakecsv/apps/mauth/: urls.py  views.py
planeks_fakecsv/static/css/generate/: base.css  create_schema.css  index.css
planeks_fakecsv/static/css/mauth/: index.css
planeks_fakecsv/static/js/generate/: create_schema.js
planeks_fakecsv/templates/: base.html
planeks_fakecsv/templates/generate/: base.html  create_schema.html  edit_schema.html  index.html  list_datasets.html
planeks_fakecsv/templates/mauth/: index.html
