[tool.poetry]
name = "planeks_fakecsv"
version = "0.1.0"
description = ""
authors = ["Hukyl <a.shalaev7125@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
celery = "^5.2.7"
Faker = "^13.12.0"
django-celery-results = "^2.3.1"
redis = "^4.3.3"
gunicorn = "^20.1.0"
whitenoise = "^6.1.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
boto3 = "^1.24.2"
django-storages = "^1.12.3"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
